
10/09/2005	frmb	split front-end data type stuff into occampi_dtype.c
09/09/2005	frmb	fixed some parser issues, now parses more complex data types
07/09/2005	frmb	initial support for DATA TYPEs
07/09/2005	frmb	initialiser hooks and chan-decl initialisation
06/09/2005	frmb	some support for built-in PROCs, got RESCHEDULE() working
05/09/2005	frmb	added pre-check parse
05/09/2005	frmb	started work on parallel usage checker
05/09/2005	frmb	some initial handling for channel direction specifiers
04/09/2005	frmb	more PAR support, some treeops, more coder-ops
03/09/2005	frmb	better PAR handling, added static-link things
14/08/2005	frmb	added PARSPACE nodes in back-end
10/08/2005	frmb	various udpates, better DFA generation
14/07/2005	frmb	tidied up DFA generation a bit, moved rules out into language bits
10/07/2005	frmb	more development, back-end code-gen looking vaguely happy
01/06/2005	frmb	checked into subversion repository
29/05/2005	frmb	fixed help to display in order given
29/05/2005	frmb	development release 0.1.2
29/05/2005	ag	source filename handling fix
14/05/2005	frmb	allocator fix, various updates
09/05/2005	frmb	development release 0.1.1
08/05/2005	frmb	initial support for instance nodes
08/05/2005	frmb	put in initial framework for alias, usage and definedness checks
07/05/2005	frmb	fixed a few bugs, more parser updates
06/05/2005	frmb	early development release, 0.1
06/05/2005	frmb	more work on the parser, added pointer-hashes
04/05/2005	frmb	more framework
20/04/2005	frmb	initial mapper and allocator, early code-gen
10/04/2005	frmb	tidy-ups
12/03/2005	frmb	more work on the lexer and parser
23/10/2004	frmb	initial framework