@@ -1,4 +1,6 @@
 
+11/09/2005	frmb	split occampi:namestart into occampi:namestartname
+11/09/2005	frmb	initial support for RECORDSUBs
 10/09/2005	frmb	split front-end data type stuff into occampi_dtype.c
 09/09/2005	frmb	fixed some parser issues, now parses more complex data types
 07/09/2005	frmb	initial support for DATA TYPEs
